# atp_stats_webapp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  TODO.md  TennisPlayer.py  app.py  callbacks.py  config.yaml  get_data.py  heroku_guide.md  index.py  parquet_to_sql.py  pyproject.toml  pytennis.py  requirements.txt  runtime.txt  setup.cfg  tennis_utils.py  test.py  test_nb.ipynb
app/: app.py  callbacks.py  filter_rows.py  index.py
atp_stats/: __init__.py  filter_rows.py  tennis.py  utils.py
data/: players.parquet  tournaments.parquet
requirements/: requirements-app.txt  requirements-dev.txt  requirements-doc.txt  requirements.txt
tennis_utils/: functionalities.py  player.py  scrapers.py  settings.py
tests/atp_stats/: test_utils.py
utils/: filter_rows.py  styles.yaml  tennis.py
views/: filters_div.py  tab1.py
webapp/: app.py  callbacks.py  config.yaml  filter_rows.py  index.py  intro.md  layout.py  styles.yaml
webapp/assets/: style.css
webapp/layout/: __init__.py  filter_rows.py  header.py  intro.md  page.py
webapp/layout/tabs/: serve_return.py  summary.py
webapp/tabs/: __init__.py  h2h.py  serve_return.py  summary.py  under_pressure.py
