[metadata]
name = atp_stats
version = 0.2.0
author = Francesco Bruzzesi
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
requires-python = >=3.8

[options]
packages =
    atp_stats

zip_safe = True

install_requires =
    compclasses==0.2.0
    numpy==1.22
    polars
    plotly==5.13.0
    pyarrow==11.0.0
    scipy==1.10.0

[options.extras_require]
app =
    dash==2.8.1
    dash-bootstrap-components==1.3.1
    gunicorn
    pandas
    pyyaml
    orjson

dev =
    black==22.12.0
    interrogate==1.5.0
    isort==5.10.1
    pre-commit==2.21.0
    pytest==7.2.0

doc =
    mkdocs==1.4.2
    mkdocs-material==9.0.0
    mkdocstrings==0.19.1

[options.packages.find]
exclude =
    docs*
    tests*
